--- a/packages/analytics-js-common/package.json
+++ b/packages/analytics-js-common/package.json
@@ -11,7 +11,8 @@
     }
   },
   "publishConfig": {
-    "directory": "dist/npm"
+    "directory": "dist/npm",
+    "access": "public"
   },
   "keywords": [
     "analytics",
