--- a/packages/analytics-js/package.json
+++ b/packages/analytics-js/package.json
@@ -24,7 +24,8 @@
     }
   },
   "publishConfig": {
-    "directory": "dist/npm"
+    "directory": "dist/npm",
+    "access": "public"
   },
   "keywords": [
     "analytics",
