ci: fix import of results to sonar

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -19,7 +19,7 @@ sonar.eslint.reportPaths=packages/analytics-js/reports/eslint.json,packages/anal
 
 # Path to sources
 sonar.sources=packages
-sonar.inclusions=**/*.js, **/*.ts
+sonar.inclusions=**/src/**/*.js, **/src/**/*.ts
 sonar.exclusions=**/*.json,**/*.html,**/*.png,**/*.jpg,**/*.gif,**/*.svg,**/nativeSdkLoader.js
 
 # Path to tests
