--- a/packages/analytics-v1.1/package.json
+++ b/packages/analytics-v1.1/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rudder-sdk-js",
-  "version": "2.37.0",
+  "version": "2.38.0",
   "description": "RudderStack Javascript SDK",
   "private": true,
   "main": "index.js",
@@ -79,7 +79,7 @@
   },
   "dependencies": {
     "@lukeed/uuid": "2.0.1",
-    "@rudderstack/analytics-js-common": "3.0.0-beta.0",
+    "@rudderstack/analytics-js-common": "^3.0.0-beta.1",
     "@segment/localstorage-retry": "1.3.0",
     "@segment/loosely-validate-event": "2.0.0",
     "@vespaiach/axios-fetch-adapter": "0.3.1",
