--- a/packages/sanity-suite/package.json
+++ b/packages/sanity-suite/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rudderstack/analytics-js-sanity-suite",
-  "version": "2.37.0",
+  "version": "2.38.0",
   "private": true,
   "description": "Sanity suite for testing JS SDK package",
   "main": "./dist/testBook.js",
@@ -54,10 +54,10 @@
   "author": "RudderStack",
   "license": "MIT",
   "dependencies": {
-    "@rudderstack/analytics-js": "3.0.0-beta.0",
+    "@rudderstack/analytics-js": "^3.0.0-beta.1",
     "deep-equal": "2.2.1",
     "object-path": "0.11.8",
-    "rudder-sdk-js": "2.37.0"
+    "rudder-sdk-js": "^2.38.0"
   },
   "devDependencies": {
     "@babel/core": "7.22.9",
