ci: fix the check size build issues
chore: cleanup

fix: add proper value to analytics instance initialized property

ci: fix the check size build issues

ci: fix the check size build issues

ci: fix the check size build issues

chore: update size limits

ci: fix the check size build issues

--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "test:ci": "lerna run --concurrency 1 test:ci",
     "check:lint": "lerna run check:lint",
     "check:lint:dev": "lerna run check:lint:dev",
-    "check:size": "lerna run check:size --scope \"@rudderstack/analytics-js\" --scope \"@rudderstack/analytics-js-plugins\"",
-    "check:size:build": "lerna run check:size:build --scope \"@rudderstack/analytics-js\" --scope \"@rudderstack/analytics-js-plugins\"",
-    "check:size:json": "lerna run check:size:json --scope \"@rudderstack/analytics-js\" --scope \"@rudderstack/analytics-js-plugins\"",
+    "check:size": "lerna run check:size",
+    "check:size:build": "lerna run check:size:build",
+    "check:size:json": "lerna run check:size:json",
     "check:circular": "lerna run check:circular",
     "check:support": "NODE_ENV=production npx browserslist --mobile-to-desktop",
     "check:support:modern": "NODE_ENV=modern npx browserslist --mobile-to-desktop",
@@ -46,7 +46,7 @@
     "commit": "git-cz",
     "release": "npx standard-version",
     "release:github": "DEBUG=conventional-github-releaser npx conventional-github-releaser -p angular --config github-release.config.js",
-    "postinstall": "patch-package && npx lerna bootstrap",
+    "postinstall": "patch-package",
     "build:v3": "lerna run --concurrency 1 --scope @rudderstack/* build",
     "build:v1.1": "lerna run --concurrency 1 --scope rudder-sdk-js build",
     "build:sanity": "rm -rf packages/sanity-suite/dist && cd packages/sanity-suite && npm run build:all && npm run build:all:staging"
