--- a/lerna.json
+++ b/lerna.json
@@ -4,7 +4,7 @@
   "useWorkspaces": true,
   "command": {
     "version": {
-      "allowBranch": ["v3-staging", "v3-release/*", "v3-hotfix-release/*", "develop", "chore/*"],
+      "allowBranch": ["v3-release/*", "v3-hotfix-release/*", "develop", "chore/*"],
       "message": "chore(release): bump up package versions [skip ci]",
       "conventionalCommits": true
     },
