--- a/.github/workflows/deploy-dev-v3.yml
+++ b/.github/workflows/deploy-dev-v3.yml
@@ -3,7 +3,7 @@ name: Deploy to DEV v3
 on:
   workflow_dispatch:
   pull_request:
-    branches: ['develop', 'v3-staging']
+    branches: ['develop']
     types:
       - closed
 
@@ -15,7 +15,7 @@ jobs:
   deploy-tag:
     name: Deploy to DEV v3
     runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/v') || startsWith(github.ref, 'refs/heads/v3-staging') || startsWith(github.ref, 'refs/heads/v3-hotfix/') || startsWith(github.ref, 'refs/heads/develop/') || github.event.pull_request.merged == true
+    if: startsWith(github.ref, 'refs/tags/v') || startsWith(github.ref, 'refs/heads/v3-hotfix/') || startsWith(github.ref, 'refs/heads/develop/') || github.event.pull_request.merged == true
     steps:
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v2
