--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "lerna:version": "lerna version --exact --conventional-commits --no-push -y",
     "lerna:publish": "lerna publish from-package --no-private -y --create-release github",
     "bump-version:monorepo": "npm version minor --git-tag-version false",
-    "setup": "npx lerna bootstrap && lerna run build:package && lerna link",
-    "setup:ci": "lerna bootstrap && lerna run build:package && lerna link",
+    "setup": "npx lerna bootstrap",
+    "setup:ci": "npx lerna bootstrap --ci",
     "clean": "lerna clean --yes && lerna run --concurrency 1 clean && git clean -xdf node_modules",
     "clean:cache": "lerna clean --yes && rimraf -rf ./node_modules/.cache",
     "start": "lerna run start --scope \"@rudderstack/analytics-js\" --scope \"@rudderstack/analytics-js-plugins\"",
@@ -46,7 +46,7 @@
     "commit": "git-cz",
     "release": "npx standard-version",
     "release:github": "DEBUG=conventional-github-releaser npx conventional-github-releaser -p angular --config github-release.config.js",
-    "postinstall": "patch-package && npm run setup",
+    "postinstall": "patch-package",
     "build:v3": "lerna run --concurrency 1 --scope @rudderstack/* build",
     "build:v1.1": "lerna run --concurrency 1 --scope rudder-sdk-js build",
     "build:sanity": "rm -rf packages/sanity-suite/dist && cd packages/sanity-suite && npm run build:all && npm run build:all:staging"
