--- a/.github/workflows/deploy-dev-v3.yml
+++ b/.github/workflows/deploy-dev-v3.yml
@@ -35,8 +35,10 @@ jobs:
       - name: Install dependencies
         env:
           HUSKY: 0
+          REMOTE_MODULES_BASE_PATH: 'https://cdn.rudderlabs.com/dev/latest/v3/modern/plugins'
+          BUGSNAG_API_KEY: ${{ secrets.RS_DEV_BUGSNAG_API_KEY }}
+          BUGSNAG_RELEASE_STAGE: 'development'
         run: |
-          npm ci --no-audit
           npm run setup:ci
 
       - name: Build files
