--- a/packages/analytics-js-plugins/package.json
+++ b/packages/analytics-js-plugins/package.json
@@ -65,6 +65,7 @@
     "check:security": "npm audit --recursive --audit-level=high",
     "start:modern": "BROWSERSLIST_ENV=modern npm run start",
     "build:modern": "npm run build:browser:modern",
+    "prepare": "npm run build:package",
     "package": "cd dist/npm && npm pack --pack-destination ../../",
     "release": "npm publish"
   },
@@ -75,7 +76,7 @@
     "@bugsnag/js": "6.5.2",
     "@lukeed/uuid": "2.0.1",
     "@preact/signals-core": "1.3.1",
-    "@rudderstack/analytics-js-common": "3.0.0",
+    "@rudderstack/analytics-js-common": "^3.0.0",
     "crypto-js": "4.1.1",
     "ramda": "0.29.0"
   },
