--- a/packages/analytics-js/package.json
+++ b/packages/analytics-js/package.json
@@ -66,6 +66,7 @@
     "check:security": "npm audit --recursive --audit-level=high",
     "start:modern": "BROWSERSLIST_ENV=modern npm run start",
     "build:modern": "npm run build:browser:modern && npm run build:npm:modern",
+    "prepare": "npm run build:package",
     "package": "cd dist/npm && npm pack --pack-destination ../../",
     "release": "npm publish"
   },
@@ -75,8 +76,8 @@
   "dependencies": {
     "@lukeed/uuid": "2.0.1",
     "@preact/signals-core": "1.3.1",
-    "@rudderstack/analytics-js-plugins": "3.0.0",
-    "@rudderstack/analytics-js-common": "3.0.0",
+    "@rudderstack/analytics-js-plugins": "^3.0.0",
+    "@rudderstack/analytics-js-common": "^3.0.0",
     "ramda": "0.29.0",
     "storejs": "2.0.5"
   },
