--- a/packages/sanity-suite/package.json
+++ b/packages/sanity-suite/package.json
@@ -51,10 +51,10 @@
   "author": "RudderStack",
   "license": "MIT",
   "dependencies": {
-    "@rudderstack/analytics-js": "3.0.0",
+    "@rudderstack/analytics-js": "^3.0.0",
     "deep-equal": "2.2.1",
     "object-path": "0.11.8",
-    "rudder-sdk-js": "2.38.1"
+    "rudder-sdk-js": "^2.38.1"
   },
   "devDependencies": {
     "@babel/core": "7.22.9",
